DP: aggiunte classi

--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -349,6 +349,40 @@ Deriva da \textit{Colour}.
 \item[-] \textit{applyToContext(context)} setta l'attributo \textit{fillStyle} del contesto grafico alla propria rappresentazione CSS, e richiama il metodo \textit{applyToContext} su \textit{{\_}o} passando \textit{context} come argomento.
 \end{elencopuntato}
 
+\subsezione{TextProperty}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Propriet\`a di un testo grafico. Non serve implementarla in JavaScript.
+
+\subsezione{TextColour}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Rappresenta il colore di un testo.
+\subsubsezione{Relazioni d'uso di altre componenti}
+Deriva da \textit{FillColour}.
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+Nessuna.
+\subsubsezione{Attivit\`a svolte e dati trattati}
+\leftskip=36pt{Nessuna.}
+
+\subsezione{TextFont}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Rappresenta il font di un testo. Mantiene il nome del font.
+\subsubsezione{Relazioni d'uso di altre componenti}
+Deriva da \textit{TextProperty} e implementa \textit{CSSProperty}.
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+Usata dalla classe \textit{Text} che ne mantiene un'istanza.
+\subsubsezione{Attivit\`a svolte e dati trattati}
+\paragrafo{Attributi privati:}
+\begin{elencopuntato}[\normindent]
+\item[-] \textit{{\_}name} nome del font.
+\end{elencopuntato}
+\paragraph{Metodi pubblici:}
+\begin{elencopuntato}[\normindent]
+\item[-] \textit{toCSS()} ritorna {\_}name.
+\item[-] \textit{applyToContext(context)} setta l'attributo \textit{font} del contesto grafico alla propria rappresentazione CSS.
+\end{elencopuntato}
+
+
+
 \subsezione{SVGWriter}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
 Si occupa di chiamare il metodo \textit{toSVG} su ogni figura e ritornare il documento SVG che corrisponde alla situazione corrente del canvas.
